--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>io.papermc.paperweight</groupId>
-            <artifactId>paperweight-userdev</artifactId>
-            <version>1.3.6</version>
+            <groupId>net.kyori</groupId>
+            <artifactId>adventure-text-minimessage</artifactId>
+            <version>4.21.0</version>
         </dependency>
         <dependency>
             <groupId>com.zaxxer</groupId>
