--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: HomeSystem
 main: me.icwj.homesystem.HomeSystem
-version: 1.0
+version: ${project.version}
 author: ICodeWithJava
 api-version: 1.20
 libraries:
